css or something
Signed-off-by: ashrude <burkemr@icloud.com>

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
+        <nav>
+            <ul>
+                <li><a href="/home">home</a></li>
+                <li><a href="/home">home</a></li>
+            </ul>
+        </nav>
         <h1>Linux is the BEST!!!</h1>
         <p>it really is the best, no joke</p>
         <img src="https://upload.wikimedia.org/wikipedia/commons/0/09/Tux%2C_gray%EF%BC%8Fgrey_background.png">
