--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Linux is the best!!</title>
+        <title>Linux is the best!!(it really is)</title>
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
